# DeepFold-Hyperplonk

./: Cargo.toml  README.md  bench_kzg.py
arithmetic/: Cargo.toml
arithmetic/benches/: field.rs
arithmetic/src/: field.rs  lib.rs  mul_group.rs  poly.rs
arithmetic/src/field/: bn_254.rs  dynamic_field.rs  goldilocks64.rs
hyperplonk/: Cargo.toml
hyperplonk/benches/: basefold.rs  deepfold.rs  mock.rs  piop.rs
hyperplonk/src/: circuit.rs  ct_sumcheck.rs  lib.rs  perm_check.rs  prod_check.rs  prod_eq_check.rs  prover.rs  selector.rs  sumcheck.rs  verifier.rs  witness.rs
poly_commit/: Cargo.toml
poly_commit/benches/: deepfold.rs  kzg.rs
poly_commit/src/: basefold.rs  deepfold.rs  kzg.rs  lib.rs  nil.rs  shuffle.rs
util/: Cargo.toml
util/src/: fiat_shamir.rs  lib.rs  merkle_tree.rs  random_oracle.rs
