[package]
name = "hyperplonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arithmetic = { path = "../arithmetic" }
poly_commit = { path = "../poly_commit" }
util = { path = "../util" }
rand = "0.8.5"
csv = "1.3.0"

[[bench]]
name = "deepfold"
harness = false

[[bench]]
name = "piop"
harness = false
